--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "semi": false
   },
   "dependencies": {
+    "mongodb": "^4.1.3",
     "next": "^11.0.0",
-    "next-auth": "latest",
+    "next-auth": "4.0.0-beta.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sqlite3": "^5.0.2"
