add mongodb adapter

--- a/.env.local.example
+++ b/.env.local.example
@@ -24,5 +24,7 @@ TWITTER_SECRET=
 
 EMAIL_SERVER=smtp://username:password@smtp.example.com.com:587
 EMAIL_FROM=NextAuth <noreply@example.com>
+SENDGRID_API_KEY=
 
-DATABASE_URL=sqlite://localhost/:memory:?synchronize=true
+MONGODB_URI=sqlite://localhost/:memory:?synchronize=true
+MONGODB_DATABASE=your-database
