--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "semi": false
   },
   "dependencies": {
+    "@next-auth/mongodb-adapter": "^0.0.2-next.285",
     "mongodb": "^4.1.3",
     "next": "^11.0.0",
     "next-auth": "4.0.0-beta.6",
