--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^0.0.2-next.285",
     "mongodb": "^4.1.3",
+    "mongoose": "^6.0.12",
     "next": "^11.0.0",
     "next-auth": "4.0.0-beta.6",
     "react": "^17.0.2",
