--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
     "next": "^11.0.0",
-    "next-auth": "4.0.0-beta.6",
+    "next-auth": "^4.0.0-beta.6",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sqlite3": "^5.0.2"
