--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@next-auth/mongodb-adapter": "^0.0.2-next.285",
+    "@sendgrid/mail": "^7.6.0",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
     "next": "^11.0.0",
