add cloudinary for image uploads

--- a/.env.local.example
+++ b/.env.local.example
@@ -28,3 +28,7 @@ SENDGRID_API_KEY=
 
 MONGODB_URI=sqlite://localhost/:memory:?synchronize=true
 MONGODB_DATABASE=your-database
+
+CLOUDINARY_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
