--- a/package.json
+++ b/package.json
@@ -23,13 +23,19 @@
   "dependencies": {
     "@next-auth/mongodb-adapter": "^0.0.2-next.285",
     "@sendgrid/mail": "^7.6.0",
+    "axios": "^0.24.0",
+    "cloudinary": "^1.27.1",
+    "cloudinary-react": "^1.7.0",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
     "next": "^11.0.0",
     "next-auth": "^4.0.0-beta.6",
+    "next-connect": "^0.11.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "streamifier": "^0.1.1"
   },
   "devDependencies": {
     "@types/node": "^15.12.4",
