--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sqlite3": "^5.0.2",
-    "streamifier": "^0.1.1"
+    "streamifier": "^0.1.1",
+    "swr": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^15.12.4",
