--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "swr": "^1.0.1"
   },
   "devDependencies": {
+    "@types/multer": "^1.4.7",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
