--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "next": "^11.0.0",
     "next-auth": "^4.0.0-beta.6",
     "next-connect": "^0.11.0",
+    "qrcode": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sqlite3": "^5.0.2",
@@ -41,6 +42,7 @@
   "devDependencies": {
     "@types/multer": "^1.4.7",
     "@types/node": "^15.12.4",
+    "@types/qrcode": "^1.4.1",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "typescript": "^4.3.4"
