--- a/package.json
+++ b/package.json
@@ -21,11 +21,18 @@
     "semi": false
   },
   "dependencies": {
+    "@emotion/cache": "^11.6.0",
+    "@emotion/react": "^11.6.0",
+    "@emotion/server": "^11.4.0",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.1.1",
+    "@mui/material": "^5.1.1",
     "@next-auth/mongodb-adapter": "^0.0.2-next.285",
     "@sendgrid/mail": "^7.6.0",
     "axios": "^0.24.0",
     "cloudinary": "^1.27.1",
     "cloudinary-react": "^1.7.0",
+    "clsx": "^1.1.1",
     "mongodb": "^4.1.3",
     "mongoose": "^6.0.12",
     "multer": "^1.4.3",
