--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "^11.0.0",
     "next-auth": "^4.0.0-beta.7",
     "next-connect": "^0.11.0",
+    "nodemailer": "^6.7.1",
     "qrcode": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
