add update-password functionality

--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "@mui/material": "^5.1.1",
     "@next-auth/mongodb-adapter": "^0.0.2-next.285",
     "@sendgrid/mail": "^7.6.0",
+    "@types/bcryptjs": "^2.4.2",
     "axios": "^0.24.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.27.1",
     "cloudinary-react": "^1.7.0",
     "clsx": "^1.1.1",
