--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
     "react-dom": "^17.0.2",
     "sqlite3": "^5.0.2",
     "streamifier": "^0.1.1",
-    "swr": "^1.0.1"
+    "swr": "^1.0.1",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/multer": "^1.4.7",
