--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/qrcode": "^1.4.1",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
+    "@types/uuid": "^8.3.3",
     "typescript": "^4.3.4"
   }
 }
