--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "xtypes": "tsc --noEmit",
     "dev": "nodemon",
     "build": "next build && tsc --project tsconfig.server.json",
-    "start": "cross-env NODE_ENV=production node dist/index.js"
+    "start": "cross-env NODE_ENV=production node dist/server/index.js"
   },
   "author": "Chandler Childs <ch@ndlerchilds.net>",
   "license": "ISC",
@@ -37,6 +37,7 @@
     "cloudinary": "^1.27.1",
     "cloudinary-react": "^1.7.0",
     "clsx": "^1.1.1",
+    "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "mongodb": "^4.2.0",
     "mongoose": "^6.0.12",
@@ -56,14 +57,14 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@types/node": "^15.12.4",
     "@types/qrcode": "^1.4.1",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
     "@types/uuid": "^8.3.3",
-    "@types/bcryptjs": "^2.4.2",
-    "@types/express": "^4.17.13",
     "nodemon": "^2.0.15",
     "ts-node": "^8.10.2",
     "typescript": "^4.3.4"
