--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "next-auth": "^4.0.0-beta.7",
     "next-connect": "^0.11.0",
     "nodemailer": "^6.7.1",
+    "pdfkit": "^0.13.0",
     "qrcode": "^1.4.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -61,6 +62,7 @@
     "@types/express": "^4.17.13",
     "@types/multer": "^1.4.7",
     "@types/node": "^15.12.4",
+    "@types/pdfkit": "^0.12.3",
     "@types/qrcode": "^1.4.1",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
